@@ -5,6 +5,7 @@ use strict;
 use warnings;
 use Carp;
 use Dancer::ModuleLoader;
+use Dancer::Config;
 use Dancer::Exception qw(:all);
 use base 'Dancer::Serializer::Abstract';
 
@@ -24,12 +25,19 @@ sub to_yaml {
 
 # class definition
 
-sub loaded { Dancer::ModuleLoader->load('YAML') }
+sub loaded { 
+    my $module = Dancer::Config::settings->{engines}{YAML}{module} || 'YAML';
+
+    raise core_serializer => q{Dancer::Serializer::YAML only support 'YAML' or 'YAML::XS'}
+        unless $module =~ /^YAML(?:::XS)$/;
+
+    Dancer::ModuleLoader->load($module) 
+        or raise core_serializer => "$module is needed and is not installed";
+}
 
 sub init {
     my ($self) = @_;
-    raise core_serializer => 'YAML is needed and is not installed'
-      unless $self->loaded;
+    $self->loaded;
 }
 
 sub serialize {
@@ -50,6 +58,30 @@ __END__
 =head1 SYNOPSIS
 
 =head1 DESCRIPTION
+
+This class is an interface between Dancer's serializer engine abstraction layer
+and the L<YAML> (or L<YAML::XS>) module.
+
+In order to use this engine, use the template setting:
+
+    serializer: YAML
+
+This can be done in your config.yml file or directly in your app code with the
+B<set> keyword. This serializer will also be used when the serializer is set
+to B<mutable> and the correct Accept headers are supplied.
+
+By default, the module L<YAML> will be used to serialize/deserialize data and
+the application configuration files. This can be changed via the
+configuration:
+
+    engines:
+        YAML:
+            module: YAML::XS
+
+Note that if you want all configuration files to be read using C<YAML::XS>, 
+that configuration has to be set via application code:
+
+   config->{engines}{YAML}{module} = 'YAML::XS';
 
 =head1 METHODS
 
